<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:padding="24dp">
    <TextView
        android:id="@+id/text_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingHorizontal="40dp"
        android:paddingBottom="20dp"
        android:text="@string/login_login"
        android:textColor="@color/material_dynamic_primary50"
        android:textSize="28sp"
        android:textStyle="bold|italic"
        tools:context=".login" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">
    <TextView
        android:layout_width="150dp"
        android:layout_height="match_parent"
        android:text="@string/username"
        android:gravity="center"
        android:textSize="20sp" />
    <EditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username_"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="Autofill,TextFields" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:text="@string/password_tv"
            android:gravity="center"
            android:textSize="20sp" />
        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            app:layout_constraintTop_toBottomOf="@id/et_username"
            tools:ignore="Autofill"
            android:inputType="textPassword" />
    </LinearLayout>
    <Button
        android:id="@+id/btn_loginInLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_corners"
        android:text="@string/login_onlogin"
        android:layout_margin="60dp" />
</LinearLayout>