<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/logo"
        android:padding="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
       />

    <TextView
        android:id="@+id/text_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingHorizontal="40dp"
        android:paddingBottom="30dp"
        android:text="@string/welcome_to_lambton_collage"
        android:textColor="#62b4cf"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/logo"
        app:layout_constraintTop_toBottomOf="@id/logo"
        tools:context=".MainActivity" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_margin="60dp"
        android:background="@drawable/round_corners"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="@id/text_welcome"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/text_welcome"
        app:layout_constraintTop_toBottomOf="@+id/text_welcome"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btn_signUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="60dp"
        android:background="@drawable/round_corners"
        android:text="@string/sign_up"
        app:layout_constraintEnd_toEndOf="@id/text_welcome"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/btn_login"
        app:layout_constraintTop_toBottomOf="@+id/btn_login"
        app:layout_constraintVertical_bias="1.0" />


</androidx.constraintlayout.widget.ConstraintLayout>